# web-cardgame

./: .gitignore  README.md  api.py  classes.py  cli.py  index.html  index.js  lobby.js  package-lock.json  package.json  test-frontent.html  test.py
client/: game.css  game.html  index.css  index.html  index.js  lobby.css  lobby.html  lobby.js  login.js  socket.js
package/: LICENSE  README.md  pyproject.toml
package/src/witches/: __init__.py  classes.py
package/tests/: example.py  test.py
server/: api.py  index.js
witches/: classes.py
