[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "witches"
version = "0.0.1"
authors = [
  { name="Carlo Böttger", email="p.py.271828@gmail.com" },
]
description = "A small package for the card game witches"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/ZoqkMaze/web-cardgame"
Issues = "https://github.com/ZoqkMaze/web-cardgame/issues"